fixed alignment issues

--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body{
 
 section{
     width: 100%;
-    height: 620px;
+    height: 100vh;
     background-image: url(./Assets/Hero-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
